Bug 1544530 - [sync 132] - Fixed Horizontal scrolling in the debugger secondary panel r=jlast
Differential Revision: https://phabricator.services.mozilla.com/D27714

UltraBlame original commit: 4b2f5b362c25414c7c3b7075b026e3b6340d2acd

--- a/devtools/client/debugger/src/components/SecondaryPanes/Breakpoints/Breakpoints.css
+++ b/devtools/client/debugger/src/components/SecondaryPanes/Breakpoints/Breakpoints.css
@@ -1,6 +1,21 @@
 .
 breakpoints
 -
+pane
+>
+.
+_content
+{
+overflow
+-
+x
+:
+auto
+;
+}
+.
+breakpoints
+-
 toggle
 {
 margin
