--- a/devtools/client/debugger/src/components/SecondaryPanes/XHRBreakpoints.css
+++ b/devtools/client/debugger/src/components/SecondaryPanes/XHRBreakpoints.css
@@ -1,6 +1,22 @@
 .
 xhr
 -
+breakpoints
+-
+pane
+.
+_content
+{
+overflow
+-
+x
+:
+auto
+;
+}
+.
+xhr
+-
 input
 -
 container
